# msgnet

./: .gitignore  CMakeLists.txt  README.md  asan.supp  vcpkg.json
.github/workflows/: build.yml
example/: hello_world.cpp
src/: msgnet.hpp
src/msgnet/: cert.cpp  cert.hpp  client.cpp  client.hpp  dh.cpp  dh.hpp  dispatcher.cpp  dispatcher.hpp  error.cpp  error.hpp  library.hpp  message.cpp  message.hpp  packet.hpp  peer.cpp  peer.hpp  pkey.cpp  pkey.hpp  server.cpp  server.hpp  stream.cpp  stream.hpp
test/: crypto_tests.cpp  server_tests.cpp  stream_test.cpp
